@@ -28,6 +28,7 @@
        (string->path "data.lua")
        (string->path "thumbnail.png")
        (string->path "data-updates.lua")
+       (string->path "data-final-fixes.lua")
        (string->path "changelog.txt")
        (string->path "LICENSE.md")
        (string->path "settings.lua")
@@ -64,6 +65,7 @@
     (copyFile "info.json" modFolder)
     (copyFile "data.lua" modFolder)
     (copyFile "data-updates.lua" modFolder)
+    (copyFile "data-final-fixes.lua" modFolder)
     (copyFile "LICENSE.md" modFolder)
     (copyFile "thumbnail.png" modFolder)
     (copyFile "changelog.txt" modFolder)
